# so_long

./: CMakeLists.txt  test_map.ber
includes/: error_msg.h  events.h  game.h  get_next_line.h  image.h  keycode.h  map.h  sprite.h
srcs/: checker.c  close.c  get_next_line.c  get_next_line_utils.c  hook.c  init.c  key_control.c  main.c  map_parser.c  map_size.c  new_gnl.c  parser.c  render.c  utils.c  utils2.c
